import androidx.compose.foundation.Image
import androidx.compose.foundation.layout.*
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.foundation.BorderStroke
import androidx.compose.foundation.isSystemInDarkTheme
import androidx.compose.material3.*
import androidx.compose.runtime.*
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.draw.clip
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.layout.ContentScale
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import androidx.lifecycle.viewmodel.compose.viewModel
import androidx.navigation.NavController
import co.edu.uniandes.vinilos.R
import co.edu.uniandes.vinilos.viewmodel.MainSelectionViewModel

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun MainSelectionScreen(navController: NavController, viewModel: MainSelectionViewModel = viewModel()) {

    val selectedProfile by viewModel.selectedProfile.collectAsState()
    // Detectar si el sistema está en modo oscuro
    val isDarkTheme = isSystemInDarkTheme()
    // Definir colores según el tema
    val backgroundColor = if (isDarkTheme) Color.Black else Color.White
    val contentColor = if (isDarkTheme) Color.White else Color.Black

    Scaffold(
        modifier = Modifier.fillMaxSize(),
        topBar = {
            TopAppBar(
                title = { Text(text = "Vinilos",  color = contentColor ) },
                colors = TopAppBarDefaults.smallTopAppBarColors(
                    containerColor = backgroundColor, // Fondo dinámico según el tema
                    titleContentColor = contentColor, // Título dinámico según el tema
                    navigationIconContentColor = contentColor // Iconos dinámicos
                ),
            )
        },
        content = { paddingValues ->
            Column(
                modifier = Modifier
                    .fillMaxSize()
                    .padding(paddingValues)
                    .padding(16.dp),
                verticalArrangement = Arrangement.Center,
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                Image(
                    painter = painterResource(id = R.drawable.logo),
                    contentDescription = "Logo",
                    contentScale = ContentScale.Crop,
                    modifier = Modifier
                        .size(150.dp)
                        .clip(RoundedCornerShape(16.dp))
                        .padding(bottom = 16.dp)
                )

                Text(
                    text = "¡Hola!",
                    style = MaterialTheme.typography.headlineLarge.copy(
                        fontWeight = FontWeight.Bold
                    ),
                    fontSize = 30.sp
                )
                Spacer(modifier = Modifier.height(16.dp))
                Text(
                    text = "Explora, gestiona y descubre tus álbumes de vinilos favoritos.",
                    style = MaterialTheme.typography.bodyLarge,
                    fontSize = 16.sp
                )
                Spacer(modifier = Modifier.height(24.dp))

                Text(
                    text = "Selecciona tu tipo de usuario para comenzar:",
                    fontWeight = FontWeight.Bold,
                    fontSize = 18.sp
                )
                Spacer(modifier = Modifier.height(16.dp))

                Button(
                    onClick = {
                        navController.navigate("get_albumes/Usuario/0")

                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(50.dp)
                        .clip(RoundedCornerShape(12.dp)),
                    colors = ButtonDefaults.buttonColors(
                        containerColor = Color.Black,
                        contentColor = Color.White
                    )
                ) {
                    Text(text = "Usuario", fontSize = 18.sp)
                }
                Spacer(modifier = Modifier.height(16.dp))

                OutlinedButton(
                    onClick = {

                        navController.navigate("get_albumes/Coleccionista/0")
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(50.dp)
                        .clip(RoundedCornerShape(12.dp)),
                    colors = ButtonDefaults.outlinedButtonColors(
                        contentColor = Color.Black
                    ),
                    border = BorderStroke(1.dp, Color.Black)
                ) {
                    Text(text = "Coleccionista", fontSize = 18.sp)
                }

                Spacer(modifier = Modifier.height(32.dp))
                selectedProfile?.let {

                }
            }
        }
    )
}
