...
                        if (showBackIcon) {
                            IconButton(onClick = { navController.navigate(backDestination) }) {
                                Icon(Icons.Default.ArrowBack, contentDescription = "Back")
                            }
                        } else {
                            IconButton(onClick = { expanded = !expanded }) {
                                Icon(imageVector = Icons.Default.Menu, contentDescription = "Menú")
                            }
                        }
                        DropdownMenu(
                            expanded = expanded,
                            onDismissRequest = { expanded = false },
                            modifier = Modifier
...
                                    onOptionSelected("get_albumes/$profile/0")
                                }
                            )
                            DropdownMenuItem(
                                text = {
                                    Text(
                                        "Listado de artistas",
                                        fontWeight = FontWeight.Bold, // Texto en negrita
                                        color = if (selectedOption == "Listado de artistas") MaterialTheme.colorScheme.primary else Color.Unspecified,
                                        modifier = Modifier.padding(horizontal = 8.dp)
                                    )
                                },
                                onClick = {
...
