...
    )
}

@Composable
fun ArtistAlbumSection(albums: List<Album>?) {
    Text(
        text = "Álbumes",
        fontWeight = FontWeight.Bold,
        fontSize = 20.sp,
        color = MaterialTheme.colorScheme.onBackground,
        modifier = Modifier.padding(horizontal = 16.dp).testTag("AlbumsHeader")
    )

...
