...
    val collectors by viewModel.collectors.collectAsStateWithLifecycle()
    val isLoading by viewModel.isLoading.collectAsStateWithLifecycle()
    val errorMessage by viewModel.errorMessage.collectAsStateWithLifecycle()

    MainScreenWithBottomBar(
        navController = navController,
        initialTitle = "Listado de coleccionistas",
        onOptionSelected = { route -> navController.navigate(route) },
        showBackIcon = true,
        backDestination = "get_albumes/Usuario/0",
        profile = "Usuario"
    ) { padding ->
        Column(
...
                else -> {
                    LazyColumn(
                        modifier = Modifier.fillMaxSize(),
                        contentPadding = PaddingValues(top = 16.dp)
                    ) {
                        items(collectors) { collector ->
                            CollectorItem(collector = collector) {
                                navController.currentBackStackEntry?.savedStateHandle?.set("collector", collector)
                                navController.navigate("collector_detail")
                            }
                        }
                    }
                }
...
