...
            contentDescription = "Sección de artistas favoritos",
            tint = MaterialTheme.colorScheme.primary,
            modifier = Modifier.size(24.dp)
        )
        Spacer(modifier = Modifier.width(8.dp))
        Text(
            text = "Artistas Favoritos",
            style = MaterialTheme.typography.titleMedium.copy(fontWeight = FontWeight.Bold),
            color = MaterialTheme.colorScheme.onBackground,
            modifier = Modifier.testTag("CollectorArtistsHeader")
        )
    }
    Spacer(modifier = Modifier.height(16.dp))
...
